# ndata

./: .gitignore  CMakeLists.txt  Doxyfile  License  README.md  debug_helpers.hpp  helpers.hpp  indexer.hpp  indexer_test.cpp  interp.hpp  interp_test.cpp  ndarray.c  ndarray.h  ndarray_test.cpp  ndata.hpp  ndata_forward_declarations.hpp  ndata_functions.hpp  ndatacontainer.hpp  ndindexer.hpp  ndindexer_test.cpp  ndinterp.hpp  ndinterp_test.cpp  ndview.hpp  nhelpers.hpp  nindexer.hpp  nvector.hpp  tuple_utility.hpp  vecarray.hpp  view.H
doc/: README_8md.html  annotated.html  classMakeString-members.html  classMakeString.html  classes.html  debug__helpers_8hpp.html  debug__helpers_8hpp_source.html  dir_8a1c2c4cc48c49b276c0593436c9d54d.html  dir_d39ee1d055526a05f424bfa2bb8cea2f.html  files.html  forward__declarations_8hpp.html  forward__declarations_8hpp_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_type.html  helpers_8hpp.html  helpers_8hpp_source.html  hierarchy.html  index.html  indexer_8hpp.html  indexer_8hpp_source.html  interp_8hpp.html  interp_8hpp_source.html  loops_8hpp.html  loops_8hpp_source.html  namespacehelpers.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespacendata.html  namespacendata_1_1helpers.html  namespacendata_1_1interp.html  namespacendata_1_1ndata.html  (+84 more)
ndata/: debug_helpers.hpp  helpers.hpp  indexer.hpp  loops.hpp  ndatacontainer.hpp  nvector.hpp  tuple_utilities.hpp  tuple_utility.hpp  vecarray.hpp  vecarray_helpers.hpp
ndata_numerics/: ninterp.hpp  numtype_adapter_fundamental.hpp
numerics/: ninterp.hpp  numtype_adapter_eigen.hpp  (+1 more)
tests/: debug_test.cpp  (+5 more)
(+75 files in other folders)
